Changes in Shorewall 4.4.21 Final

1) Correct code generated by TPROXY.

2) Make 'fallback' and 'balance' mutually exclusive.

Changes in Shorewall 4.4.21 RC 1

1)  Fix empty parameter lists in _DEFAULT settings.

2)  Correct FOREWARD_CLEAR_MARK -> FORWARD_CLEAR_MARK in an error
    message.

3)  Use updated config in verification during upgrade.

Changes in Shorewall 4.4.21 Beta 3

1)  Shorewall-init can now save/restore ipsets.

2)  Correct handling of DEFAULTS in non-action contexts.

3)  Rename read_action_param and change signature.

4)  Add DEFAULT to macro files.

Changes in Shorewall 4.4.21 Beta 2

1)  Implement the 'update' command.

Changes in Shorewall 4.4.21 Beta 1

1)  IPSET support in Shorewall6.

2)  Make AUTOMAKE follow CONFIG_PATH

3)  Default values for action parameters.

4)  Parameterize Drop and Reject actions.

Changes in Shorewall 4.4.20.1

1)  Corrected FSF address.

2)  Don't modify configfiles/shorewall.conf &
    configfiles/shorewall6.conf.

3)  Change 'plain' default.

Changes in Shorewall 4.4.20 Final

1)  Set /proc/sys/net/bridge/bridge_nf_call_ip6?tables.

2)  Add 'I' and 'NI' STATEs in secmarks.

Changes in Shorewall 4.4.20 RC 1

1)  Update release documents.

2)  Annotate config files with manpage info.

3)  Don't place negative numbers in IPMARK masks.

4)  Fix IPv6 getparams

Changes in Shorewall 4.4.20 Beta 5

1)  Rename Auditing Macros

2)  Add -T option to compile and check

3)  Implement ROUTEBACK_LOG_LEVEL and ROUTEBACK_AUDIT

Changes in Shorewall 4.4.20 Beta 4

1)  Smarten up the tc devnum algorithm.

2)  Implement LEGACY_FASTSTART option.

3)  Add a '-c' option to the restart command.

4)  /sbin/shorewall and /sbin/shorewall6 unification.

5)  Remove dependence on 'make'

Changes in Shorewall 4.4.20 Beta 3

1)  Add auditing support.

Changes in Shorewall 4.4.20 Beta 2

1)  Use 'my' for module globals unless variable is exported.

2)  Merged fixes from 4.4.19.4.

3)  Implemented ACCOUNTING_TABLE
