@@ -386,6 +386,10 @@ REDIRECT       net     -       tcp     80      -       1.2.3.4</programlisting>
       first parameter, <replaceable>def2</replaceable> is the default value
       for the second parameter and so on. You can specify an empty default
       using '-' (e.g. DEFAULTS DROP,-,audit).</para>
+
+      <para>The DEFAULTS directive also determines the maximum number of
+      parameters that an action may have. If more parameters are passed than
+      have default values, an error message is issued. </para>
     </section>
 
     <section>
