@@ -67,6 +67,10 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     is the default value for the second parameter and so on. To specify
     an empty default, use '-'.
 
+    The DEFAULTS directive also determines the maximum number of
+    parameters that an action may have. If more parameters are passed
+    than have default values, an error message is issued.
+
 3)  Parameterized macros may now specify a default parameter value
     using the DEFAULT directive.
 
