@@ -4,6 +4,14 @@ Changes in Shorewall 4.4.21 Final
 
 2) Make 'fallback' and 'balance' mutually exclusive.
 
+3) Generate error if too many parameters to a function with DEFAULT
+
+4) Prepare for more parameterized actions
+
+5) Fix parameter push/pop in process_action()
+
+6) Add comment push/pop in process_action()
+
 Changes in Shorewall 4.4.21 RC 1
 
 1)  Fix empty parameter lists in _DEFAULT settings.
